# buri

./: .burirc  .gitignore  .goreleaser.yaml  Cargo.toml  README.md  go.mod  go.sum  install.sh  main.go
.github/: dependabot.yaml
.github/workflows/: bench.yaml  bench.yml  ci.yaml  ci.yml  crates-security-audit.yaml  deploy-cloudflare-workers.yaml  deploy-version-api.yaml  nightly.yaml  nightly.yml  release.yaml  release.yml
apps/cli/: README.md
apps/cli/src/: impure.rs  main.rs  thor.rs
apps/thor/src/: init.rs
cli/: Cargo.toml  README.md
cli/commands/: WORKSPACE  build.go  build_test.go  format.go  format_test.go  init.go  init_test.go  root.go  test.go  test_test.go
cli/helpers/: dep-graph.go  dep_graph.go  dep_graph_test.go
cli/src/: config.rs  context.rs  errors.rs  impure.rs  init.rs  main.rs  security.rs  thor.rs  version_api.rs
cmd/: build.go  build_test.go  format.go  format_test.go  init.go  root.go  test.go  test_test.go
libs/build-graph/src/: topological_sort.rs
libs/files/: Cargo.toml
libs/files/src/: cli_config.rs  lib.rs
libs/protos/src/: lib.rs  version.proto  version.rs
protos/: Cargo.toml  build.pb.go  build.proto  build.rs  workspace.pb.go  workspace.proto
protos/src/: lib.rs  version.proto  version.rs  workspace.proto
rust/buri_js_lite/src/: main.rs
rust/e2e/src/: lib.rs
rust/js_backend/src/literals/: string.rs
rust/parser/src/: block.rs  if_statement.rs  line.rs
rust/type_checker/src/: apply_constraints.rs  parsed_expression_to_generic_expression.rs  resolve_concrete_types.rs  scope.rs  type_schema.rs
tests/js/valid/if/: nested.buri
tests/js/valid/integers/: unsigned.buri  unsigned.test.js
tests/js/valid/strings/: string.buri  string.test.js
thor/: Cargo.toml
thor/src/: init.rs  main.rs
utils/build-graph/: Cargo.toml
utils/build-graph/src/: lib.rs  target_files.rs  topological_sort.rs
utils/files/: Cargo.toml
utils/files/src/: build_file.rs  buri_version_file.rs  cli_config.rs  lib.rs  version_file.rs  workspace_file.rs
utils/macros/src/: lib.rs
utils/test/: Cargo.toml
utils/test/src/: create_file.rs  lib.rs
utils/version/: Cargo.toml
utils/version/src/: lib.rs
version-api/: Cargo.toml  wrangler.toml
version-api/src/: kv.rs  lib.rs  parse_release.rs  raw_data.rs  verifications.rs
