[workspace]

members = [
    "cli",
    "protos",
    "thor",
    "utils/build-graph",
    "utils/files",
    "utils/macros",
    "utils/target",
    "utils/test",
    "utils/version",
    "version-api",
]

[workspace.dependencies]
base64 = "0.21.2"
bytes = "1.4.0"
clap = { version = "4.3.10", features = ["derive"] }
dirs = "5.0.1"
files = { path = "utils/files" }
macros = { path = "utils/macros" }
prost = "0.11.9"
prost-build = "0.11.9"
protobuf-src = "1.1.0"
protos = { path = "protos" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
target = { path = "utils/target" }
test-utils = { path = "utils/test" }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.5"
toml_edit = "0.19.11"
url = "2.4.0"
vfs = "0.9.0"
version = { path = "utils/version" }
virtual-io = "0.1.0"
worker = "0.0.17"

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
