[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs.workspace = true
files.workspace = true
macros.workspace = true
prost.workspace = true
protos.workspace = true
reqwest.workspace = true
tokio.workspace = true
toml_edit.workspace = true
vfs.workspace = true
virtual-io.workspace = true
version.workspace = true
