[package]
name = "version-api"
version = "0.1.0"
edition = "2021"

[dependencies]
worker.workspace = true
prost.workspace = true
protos = { path = "../protos" }


# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]
