[package]
name = "version-api"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../utils/macros" }
prost.workspace = true
protos = { path = "../protos" }
serde.workspace = true
serde_json.workspace = true
worker.workspace = true
version = { path = "../utils/version" }


# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]
